Set Roomba's clock

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
   RemoteDebug
   PubSubClient
   ArduinoJson
+  Timezone
 
 upload_port = roomba.local
 build_flags = -DLOGGING=1 -DMQTT_MAX_PACKET_SIZE=512
