--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-platform = espressif8266
-board = esp12e
+platform = espressif32
+board = wemos_d1_mini32
 framework = arduino
 lib_deps =
   RemoteDebug
