Tailor to Roomba 870 Wakeup did not work. Keeps roomba from charging

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,6 @@ lib_deps =
   Timezone
 
 upload_port = roomba.local
+;upload_port = /dev/ttyUSB*
 build_flags = -DLOGGING=1 -DMQTT_MAX_PACKET_SIZE=512
+monitor_port = /dev/ttyUSB*
