--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif32
-board = wemos_d1_mini32
+[env:huzzah]
+platform = espressif8266
+board = huzzah
 framework = arduino
 lib_deps =
   RemoteDebug
   PubSubClient
   ArduinoJson
-  Timezone
+  WiFiManager
+  jchristensen/Timezone
 
-upload_port = roomba.local
-;upload_port = /dev/ttyUSB*
+upload_port = /dev/ttyUSB0
+monitor_speed = 115200
 build_flags = -DLOGGING=1 -DMQTT_MAX_PACKET_SIZE=512
-monitor_port = /dev/ttyUSB*
