--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
+#build_type = debug
+#monitor_filters = esp8266_exception_decoder, colorize
 board_build.filesystem = littlefs
 lib_deps =
   RemoteDebug
