--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,8 @@ lib_deps =
   WiFiManager
   jchristensen/Timezone
 
-#upload_port = /dev/ttyUSB0
-upload_port = 10.111.10.18
-upload_protocol = espota
+upload_port = /dev/ttyUSB0
+#upload_port = 10.111.10.18
+#upload_protocol = espota
 monitor_speed = 115200
 build_flags = -DLOGGING=1 -DMQTT_MAX_PACKET_SIZE=512
