--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,9 @@ lib_deps =
   PubSubClient
   ArduinoJson
   WiFiManager
-  jchristensen/Timezone
+  #jchristensen/Timezone
+  NTPClient
+  SimpleTimer
 
 upload_port = /dev/ttyUSB0
 #upload_port = 10.111.10.18
